2004-01-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/node-context.cpp (sp_node_context_root_handler):
	* src/object-edit.cpp (sp_arc_start_set, sp_arc_end_set,
	sp_spiral_inner_set, sp_spiral_outer_set):
	* src/select-context.cpp (sp_select_context_root_handler):
	* src/seltrans.cpp (sp_sel_trans_rotate_request):
	Fix for options.rotationsnapsperpi == 0.

	* src/event-context.cpp (sp_event_context_private_root_handler):
	Address warning.

2004-01-22  bulia byak <bulia@users.sourceforge.net>

	* src/attributes.h src/attributes.cpp: Added pagecolor, bordercolor, borderopacity (from sodipodi), pageshadow.

	* src/sp-namedview.h src/sp-namedview.cpp: Added reading page attributes.
 
	* src/desktop.cpp: Added setting page and border color (from sodipodi), pageshadow taken from namedview.

	* src/preferences-skeleton.h: Moved pageshadow into namedview, added page and border colors to the template.
 
	* src/dialogs/desktop-properties.cpp: Added page and border color selectors (from
	sodipodi), moved former document settings here.

	* src/verbs.cpp src/verbs.h: Removed document settings, renamed editing window into document options.

	* src/interface.cpp: Removed document settings command.

	* src/dialogs/document-properties.cpp,h src/dialogs/tool-attributes.cpp,h: Removed.

	* src/dialogs/object-properties.cpp: Removed size and position dialog.

	* src/dialogs/Makefile.am: Removed unused dialogs.

	* src/verbs.cpp src/verbs.h: Removed unused dialog verbs.

	* src/dyna-draw-context.cpp: Removed debug output.

	* src/node-context.h: New members for tracking left, right/alt, ctrl.

	* src/nodepath.cpp: Reorganize [] <> code, add update_repr (oops). Fix near-zero handles behavior with <>.

	* src/sp-item-transform.cpp: More correct transformation writing method: use each
	item's transform writer instead of simply adding transform= attribute.
 
	* src/document.cpp src/document.h src/document-undo.cpp: Added